; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-amd-mp2-plat.c_i2c_amd_xfer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-amd-mp2-plat.c_i2c_amd_xfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32 }
%struct.i2c_msg = type { i32 }
%struct.amd_i2c_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_adapter*, %struct.i2c_msg*, i32)* @i2c_amd_xfer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_amd_xfer(%struct.i2c_adapter* %0, %struct.i2c_msg* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.i2c_adapter*, align 8
  %6 = alloca %struct.i2c_msg*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.amd_i2c_dev*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.i2c_msg*, align 8
  %11 = alloca i32, align 4
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %5, align 8
  store %struct.i2c_msg* %1, %struct.i2c_msg** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load %struct.i2c_adapter*, %struct.i2c_adapter** %5, align 8
  %13 = call %struct.amd_i2c_dev* @i2c_get_adapdata(%struct.i2c_adapter* %12)
  store %struct.amd_i2c_dev* %13, %struct.amd_i2c_dev** %8, align 8
  %14 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %8, align 8
  %15 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  %20 = zext i1 %19 to i32
  %21 = call i64 @unlikely(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %3
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %4, align 4
  br label %65

26:                                               ; preds = %3
  %27 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %8, align 8
  %28 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @amd_mp2_pm_runtime_get(i32 %30)
  store i32 0, i32* %9, align 4
  br label %32

32:                                               ; preds = %48, %26
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %7, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %51

36:                                               ; preds = %32
  %37 = load %struct.i2c_msg*, %struct.i2c_msg** %6, align 8
  %38 = load i32, i32* %9, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.i2c_msg, %struct.i2c_msg* %37, i64 %39
  store %struct.i2c_msg* %40, %struct.i2c_msg** %10, align 8
  %41 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %8, align 8
  %42 = load %struct.i2c_msg*, %struct.i2c_msg** %10, align 8
  %43 = call i32 @i2c_amd_xfer_msg(%struct.amd_i2c_dev* %41, %struct.i2c_msg* %42)
  store i32 %43, i32* %11, align 4
  %44 = load i32, i32* %11, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %36
  br label %51

47:                                               ; preds = %36
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %9, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %9, align 4
  br label %32

51:                                               ; preds = %46, %32
  %52 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %8, align 8
  %53 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @amd_mp2_pm_runtime_put(i32 %55)
  %57 = load i32, i32* %11, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %61

59:                                               ; preds = %51
  %60 = load i32, i32* %11, align 4
  br label %63

61:                                               ; preds = %51
  %62 = load i32, i32* %7, align 4
  br label %63

63:                                               ; preds = %61, %59
  %64 = phi i32 [ %60, %59 ], [ %62, %61 ]
  store i32 %64, i32* %4, align 4
  br label %65

65:                                               ; preds = %63, %23
  %66 = load i32, i32* %4, align 4
  ret i32 %66
}

declare dso_local %struct.amd_i2c_dev* @i2c_get_adapdata(%struct.i2c_adapter*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @amd_mp2_pm_runtime_get(i32) #1

declare dso_local i32 @i2c_amd_xfer_msg(%struct.amd_i2c_dev*, %struct.i2c_msg*) #1

declare dso_local i32 @amd_mp2_pm_runtime_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
